# sumkin

./: Cargo.toml  flake.nix  shell.nix
src/: error.rs  lib.rs  log.rs  sqlite.rs  traits.rs
