[package]
name = "sumkin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
derive-getters = "0.2"
lazy_static = "1.4.0"
snafu = "0.6"
sqlx = { version = "0.6" }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.2"
tracing-subscriber = "0.2"
tracing-test = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
